# ESM_ICP

./: .gitignore  .gitmodules  CMakeLists.txt  CMatrix_0.txt  DL_registration.py  ESM_ICP_demo_Viewer.cpp  README.md  Transformation_for_Fig1_(person).txt  Transformation_for_Fig_(piano).txt  Transfromation_for Fig1_(airplane).txt  cosmicp.cpp  cosmicp_gpu.cu  figures_plots.py  heat_map.py  last_transform.txt  src_demean0.txt  tgt_demean0.txt  transform.npy
